fixed select z-index

--- a/src/main/client/style.css
+++ b/src/main/client/style.css
@@ -1,5 +1,5 @@
 @import url('~react-select/dist/react-select.css');
 
-.Select {
+.Select-menu-outer {
   z-index: 2000;
 }
